pkg/testdata/TestPatchVirtualService/use-cases/match-by-uri-and-port/add-uri-route-with-destination-override/patch.json
{
  "spec": {
    "http": [
      {
        "match": [
          {
            "uri": {
              "prefix": "/gpt/dev"
            },
            "port": 7442
          }
        ],
        "route": [
          {
            "destination": {
              "host": "istio-shipping-stateful-0.istio-shipping-stateful.service-mesh.svc.cluster.local",
              "port": {
                "number": 15375
              }
            },
            "weight": 50
          },
          {
            "destination": {
              "host": "istio-shipping-stateful-1.istio-shipping-stateful.service-mesh.svc.cluster.local",
              "port": {
                "number": 15375
              }
            },
            "weight": 50
          }
        ]
      }
    ]
  }
}
